--- a/src/client/Client/Pages/Vestings/MyVestingsPage.razor
+++ b/src/client/Client/Pages/Vestings/MyVestingsPage.razor
@@ -24,70 +24,80 @@
         <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="56px" Width="100%" />
         <MudSkeleton Class="mt-2" SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="280px" Width="100%" />
     }
-    @*else if (Locks.Any())
+    else if (Vestings.Any())
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
-             <MudTable Items="@Locks" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.Sm">
-        <HeaderContent>
-        <MudTh>Lock Index</MudTh>
-        <MudTh>Date Start</MudTh>
-        <MudTh>Date Unlock</MudTh>
-        <MudTh>Revocable</MudTh>
-        <MudTh>Total Amount</MudTh>
-        <MudTh>Status</MudTh>
-        <MudTh>Actions</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-        @if (@context.AssetToken == null)
-        {
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-        }
-        else
-        {
-        <MudTd DataLabel="Lock Index">
-        <MudText Color="Color.Primary" Class="cursor-pointer" @onclick="(() => InvokeLockPreviewerModal(context.Transaction.LockIndex))">
-        <b>@context.Transaction.LockIndex</b>
-        </MudText>
-        </MudTd>
-        <MudTd DataLabel="Date Start">@context.Transaction.StartTime.ToCurrentTimeZone().ToFormat("MMMM dd, yyyy hh:mm tt")</MudTd>
-        <MudTd DataLabel="Date Unlock">@context.Transaction.UnlockTime.ToCurrentTimeZone().ToFormat("MMMM dd, yyyy hh:mm tt")</MudTd>
-        <MudTd DataLabel="Revocable">
-        @if (context.IsRevocable)
-        {
-        <span>Yes</span>
-        }
-        else
-        {
-        <span>No</span>
-        }
-        </MudTd>
-        <MudTd DataLabel="Total Amount">
-        <div class="d-flex">
-        @context.TotalAmountDisplay
-        </div>
-        </MudTd>
-        <MudTd DataLabel="Status">
-        <MudChip Color="@context.StatusColor" Size="Size.Small">
-        <b>@context.Status</b>
-        </MudChip>
-        </MudTd>
-        <MudTd DataLabel="Actions">
-        <MudMenu Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" DisableElevation="true" Icon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary" Direction="Direction.Left" OffsetX="true">
-        <MudMenuItem Disabled="@(!context.IsRevocable || !context.Transaction.IsActive)" OnClick="(() => InvokeRevokeLockModalAsync(context))">Revoke Lock</MudMenuItem>
-        </MudMenu>
-        </MudTd>
-        }
-        </RowTemplate>
+            <MudTable Items="@Vestings" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.Sm">
+                <HeaderContent>
+                    <MudTh>Vesting Index</MudTh>
+                    <MudTh>Date Start</MudTh>
+                    <MudTh>Periods</MudTh>
+                    <MudTh>Revocable</MudTh>
+                    <MudTh>Total Amount</MudTh>
+                    <MudTh>Upcoming Release</MudTh>
+                    <MudTh>Status</MudTh>
+                    <MudTh>Actions</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    @if (@context.AssetToken == null)
+                    {
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    }
+                    else
+                    {
+                    <MudTd DataLabel="Vesting Index">
+                        <MudText Color="Color.Primary">
+                            <b Class="cursor-pointer">@context.Transaction.VestingIndex</b>
+                        </MudText>
+                    </MudTd>
+                    <MudTd DataLabel="Date Created">@context.Transaction.CreationTime.ToCurrentTimeZone().ToFormat("MMMM dd, yyyy hh:mm tt")</MudTd>
+                    <MudTd DataLabel="Periods">@context.PeriodDisplay</MudTd>
+                    <MudTd DataLabel="Revocable">
+                        @if (context.IsRevocable)
+                            {
+                            <span>Yes</span>
+                            }
+                            else
+                            {
+                            <span>No</span>
+                            }
+                    </MudTd>
+                    <MudTd DataLabel="Total Amount">
+                        @context.TotalAmountDisplay
+                    </MudTd>
+                    <MudTd DataLabel="Upcoming Release">
+                        @if (context.UpcomingPeriod != null)
+                            {
+                            <span>@context.UpcomingPeriod.Name (@context.UpcomingPeriod.UnlockTime.ToCurrentTimeZone().ToFormat(ClientConstants.LongDateFormat))</span>
+                            }
+                            else
+                            {
+                            <span>Unlocked</span>
+                            }
+                    </MudTd>
+                    <MudTd DataLabel="Status">
+                        <MudChip Color="@context.StatusColor" Size="Size.Small">
+                            <b>@context.StatusDisplay</b>
+                        </MudChip>
+                    </MudTd>
+                    <MudTd DataLabel="Actions">
+                        <MudMenu Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" DisableElevation="true" Icon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary" Direction="Direction.Left" OffsetX="true">
+                            <MudMenuItem Disabled="@(!context.IsRevocable || !context.Transaction.IsActive)" OnClick="(() => InvokeRevokeVestingModalAsync(context))">Revoke Vesting</MudMenuItem>
+                        </MudMenu>
+                    </MudTd>
+                    }
+            </RowTemplate>
         </MudTable>
 
-        </MudPaper>
-    }*@
+    </MudPaper>
+    }
     else
     {
         <MudText Typo="Typo.h6" Class="mt-8" Color="Color.Secondary">
