--- a/src/client/Client/Pages/Vestings/Modals/ClaimVestingModal.razor
+++ b/src/client/Client/Pages/Vestings/Modals/ClaimVestingModal.razor
@@ -18,12 +18,12 @@
                                     You are about to claim <b>@Model.AmountDisplay</b> from <b>Vesting #@((long)Model.VestingIdx) - @Model.PeriodName</b> as receiver address <b>@Model.ReceiverAddress</b>.
                                 </MudText>
                             </MudItem>
-@*
+
                             <MudItem xs="12">
                                 <MudText Typo="Typo.body1" Color="Color.Primary">
-                                    <b>Claim Lock Fee: @ClaimLockPaymentFeeDisplay</b>
+                                    <b>Claim Vesting Fee: @ClaimVestingPaymentFeeDisplay</b>
                                 </MudText>
-                            </MudItem>*@
+                            </MudItem>
                         }
                     </MudGrid>
                 </MudContainer>
