--- a/src/client/Client/Pages/Vestings/Modals/RevokeVestingModal.razor
+++ b/src/client/Client/Pages/Vestings/Modals/RevokeVestingModal.razor
@@ -19,11 +19,11 @@
                                 </MudText>
                             </MudItem>
 
-                           @* <MudItem xs="12">
+                            <MudItem xs="12">
                                 <MudText Typo="Typo.body1" Color="Color.Primary">
-                                    <b>Revoke Lock Fee: @RevokeLockPaymentFeeDisplay</b>
+                                    <b>Revoke Vesting Fee: @RevokeVestingPaymentFeeDisplay</b>
                                 </MudText>
-                            </MudItem>*@
+                            </MudItem>
                         }
                     </MudGrid>
                 </MudContainer>
@@ -39,7 +39,7 @@
                         }
                         else
                         {
-                            <span>REVOKE LOCK</span>
+                            <span>REVOKE VESTING</span>
                         }
                     </MudButton>
                 }
