--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -27,13 +27,13 @@
         <MudNavMenu Rounded="true" Margin="Margin.Dense">
             <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
             <MudNavLink Href="/assets" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payments">My Assets</MudNavLink>
-            <MudNavGroup Title="Locking" Icon="@Icons.Material.Filled.LockClock" Expanded="true">
+            <MudNavGroup Title="Locks" Icon="@Icons.Material.Filled.LockClock" Expanded="true">
                 <MudNavLink Href="/locks/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CurrencyBitcoin">Locked Assets</MudNavLink>
                 <MudNavLink Href="/locks" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lock">My Locks</MudNavLink>
                 <MudNavLink Href="/locks/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
                 <MudNavLink Href="/locks/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
             </MudNavGroup>
-            <MudNavGroup Title="Vesting" Icon="@Icons.Material.Filled.Assessment" Expanded="true">
+            <MudNavGroup Title="Vestings" Icon="@Icons.Material.Filled.Assessment" Expanded="true">
                 <MudNavLink Href="/vestings" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AccountBalance">My Vestings</MudNavLink>
                 <MudNavLink Href="/vestings/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
                 <MudNavLink Href="/vestings/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
