--- a/src/client/Client/Pages/Locks/MyLockClaimsPage.razor
+++ b/src/client/Client/Pages/Locks/MyLockClaimsPage.razor
@@ -5,7 +5,7 @@
 <MudContainer MaxWidth="MaxWidth.False">
     <MudText Class="mb-0 mud-text-secondary" Typo="Typo.body1" GutterBottom="false">Locks</MudText>
 
-    <div class="d-flex my-2">
+    <div class="d-flex mt-2">
         <MudHidden Breakpoint="Breakpoint.SmAndUp">
             <MudText Class="mr-2 align-self-center" Typo="Typo.h5" GutterBottom="false">My Claims</MudText>
         </MudHidden>
@@ -17,6 +17,14 @@
         {
             <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" OnClick="FetchDataAsync" />
         }
+    </div>
+
+    <div class="my-2">
+        <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
+            <MudChip Class="ma-0" Color="Color.Secondary" Variant="Variant.Text" Size="Size.Small">
+                @ManagerToolkit.NeoSettings.LockTokenVaultContractHash
+            </MudChip>
+        </MudHidden>
     </div>
 </MudContainer>
 
